feat: initial project setup and WebSocket implementation
BREAKING CHANGE: First version of TicTacToe CLI Backend

- Initialize Next.js project with WebSocket server
- Implement real-time multiplayer game logic
- Add rate limiting for connection security
- Set up Winston logger for error tracking
- Configure development and production environments
- Add proper project documentation
- Implement game session management
- Add username validation
- Configure automatic opponent matching
- Add timeout handling for inactive games

Version: v0.1.0

--- a/package.json
+++ b/package.json
@@ -1,7 +1,29 @@
 {
-  "name": "backend",
+  "name": "tictactoe_cli_backend",
   "version": "0.1.0",
+  "description": "Backend and landing page for developer-friendly TicTacToe game that runs in your terminal. Take a break from coding and enjoy a quick game without leaving your development environment! ⌨️",
   "private": true,
+  "author": {
+    "name": "Abdullah Nettoor",
+    "email": "abdullahnettoor@gmail.com",
+    "url": "https://github.com/abdullahnettoor"
+  },
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/abdullahnettoor/tictactoe-backend"
+  },
+  "bugs": {
+    "url": "https://github.com/abdullahnettoor/tictactoe-backend/issues"
+  },
+  "keywords": [
+    "tictactoe",
+    "cli",
+    "game",
+    "multiplayer",
+    "websocket",
+    "terminal"
+  ],
   "scripts": {
     "dev": "node server.js",
     "build": "next build",
