--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lucide-react": "^0.456.0",
     "next": "15.0.2",
     "rate-limiter-flexible": "^5.0.4",
     "react": "19.0.0-rc-02c0e824-20241028",
