feat: enable WebSocket communication.
- Move the WebSocket server to a separate file
- Update the `vercel.json` file to handle WebSocket connections
- Update the client-side code to connect to the WebSocket server
- Add a production environment check for the WebSocket URL
- Log the WebSocket URL on connection

Signed-off-by: abdullahnettoor <abdullahnettoor@gmail.com>

--- a/vercel.json
+++ b/vercel.json
@@ -9,10 +9,11 @@
   "routes": [
     {
       "src": "/ws",
-      "dest": "server.js",
-      "headers": {
-        "Upgrade": "websocket"
-      }
+      "dest": "server.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "server.js"
     }
   ]
-} 
+}
