feat: add WebSocket support.
- Remove unnecessary comment in `server.js`
- Add WebSocket server to `server.js`
- Add WebSocket connection logic to `src/app/page.js`
- Add WebSocket headers to `vercel.json`
- Add automatic reconnection logic to `src/app/page.js`

Signed-off-by: abdullahnettoor <abdullahnettoor@gmail.com>

--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,11 @@
   "routes": [
     {
       "src": "/ws",
-      "dest": "server.js"
+      "dest": "server.js",
+      "headers": {
+        "Upgrade": "websocket",
+        "Connection": "upgrade"
+      }
     },
     {
       "src": "/(.*)",
