chore: optimize Vercel configuration.
- Remove unnecessary headers for the websocket route
- Remove unused code in `src/app/page.js`
- Add `check` property to the websocket route in `vercel.json`
- Set `NODE_ENV` to `production` in `vercel.json`

Signed-off-by: abdullahnettoor <abdullahnettoor@gmail.com>

--- a/vercel.json
+++ b/vercel.json
@@ -10,14 +10,14 @@
     {
       "src": "/ws",
       "dest": "server.js",
-      "headers": {
-        "Upgrade": "websocket",
-        "Connection": "upgrade"
-      }
+      "check": true
     },
     {
       "src": "/(.*)",
       "dest": "server.js"
     }
-  ]
+  ],
+  "env": {
+    "NODE_ENV": "production"
+  }
 }
