chore: migrate server to Next.js.
- Add a `server.config.js` file to configure the webpack server
- Move the `build` script to use `next build` and `npm run copy-server`
- Add a `copy-server` script to copy `server.js` to the `.next` directory
- Move the `WebSocketServer` initialization to a separate line
- Update the `vercel.json` file to use the `@vercel/next` builder
- Remove the `check` property from the `vercel.json` routes
- Remove the `env` property from the `vercel.json` file
- Remove the `ws` dependency from the server
- Remove the `NODE_ENV` environment variable from the `vercel.json` file

Signed-off-by: abdullahnettoor <abdullahnettoor@gmail.com>

--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
   ],
   "scripts": {
     "dev": "node server.js",
-    "build": "next build",
+    "build": "next build && npm run copy-server",
     "start": "NODE_ENV=production node server.js",
+    "copy-server": "cp server.js .next/",
     "lint": "next lint"
   },
   "dependencies": {
