feat: refactor UI and add features
- Add `ws` to the externals list for server-side builds
- Change the background and foreground colors to dark mode
- Add a rotating border animation to the title
- Add a gradient border animation to the terminal
- Add mouse position tracking for the background gradient
- Add a download button for the CLI
- Update the features section with icons and descriptions
- Update the how to play section with icons and descriptions
- Add a footer with a link to the developer's GitHub
- Add new color variables for primary and secondary colors
- Add a new color variable for terminal background
- Update the Vercel configuration to use the server.js file for all routes
- Update the Vercel configuration to handle websocket connections

Signed-off-by: abdullahnettoor <abdullahnettoor@gmail.com>

--- a/vercel.json
+++ b/vercel.json
@@ -2,21 +2,22 @@
   "version": 2,
   "builds": [
     {
-      "src": "package.json",
-      "use": "@vercel/next",
-      "config": {
-        "buildCommand": "npm run build"
-      }
+      "src": "server.js",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/ws",
-      "dest": "server.js"
+      "dest": "server.js",
+      "headers": {
+        "Upgrade": "websocket",
+        "Connection": "upgrade"
+      }
     },
     {
       "src": "/(.*)",
-      "dest": "/$1"
+      "dest": "server.js"
     }
   ]
 }
