--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "rate-limiter-flexible": "^5.0.4",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react-icons": "^5.3.0",
     "uuid": "^9.0.1",
     "winston": "^3.16.0",
     "ws": "^8.18.0"
