build: migrate to Server Components and Vercel
- Rename `next.config.mjs` to `next.config.js`
- Add `output: 'standalone'` to `next.config.js`
- Add `experimental.serverActions` to `next.config.js`
- Remove `server.config.js`
- Update `package.json` build script
- Update `vercel.json` to use `@vercel/next`
- Update `vercel.json` routes to use `/$1`

Signed-off-by: abdullahnettoor <abdullahnettoor@gmail.com>

--- a/package.json
+++ b/package.json
@@ -26,9 +26,8 @@
   ],
   "scripts": {
     "dev": "node server.js",
-    "build": "next build && npm run copy-server",
+    "build": "next build",
     "start": "NODE_ENV=production node server.js",
-    "copy-server": "cp server.js .next/",
     "lint": "next lint"
   },
   "dependencies": {
